--- a/pub/wefound.yaml
+++ b/pub/wefound.yaml
@@ -6,269 +6,108 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇺🇸_US_美国->🇬🇧_GB_英国_1
-    type: vmess
-    server: 162.159.142.243
-    port: 80
-    cipher: auto
-    uuid: dbb98828-4b51-437a-aa8e-fa9dd627cf90
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: uk3.889611.com
-  - &id002
     name: 🇺🇸_US_美国_1
     type: vmess
-    server: 104.21.75.246
-    port: 80
+    server: 38.180.33.136
+    port: 50104
     cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    uuid: 790f6802-7535-4109-de6d-15f676d5e3f7
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id002
+    name: 🇺🇸_US_美国_2
+    type: vmess
+    server: 132.145.132.227
+    port: 37121
+    cipher: auto
+    uuid: 93845b50-26f6-4203-f5ad-4d231d4e8f45
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
       path: /
-      headers:
-        host: sbl2.shabijichang.com
   - &id003
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国_1
+    name: 🇺🇸_US_美国_3
     type: vmess
-    server: 104.19.155.92
-    port: 2096
+    server: 148.135.33.93
+    port: 443
     cipher: auto
-    uuid: c7ccf81e-2f35-4170-aeb8-f84fb2ec2b29
-    alterId: 0
+    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
+    alterId: 64
     tls: true
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /@FreeVPNHomes@FreeVPNHomes
+      path: /path/1702650992491
       headers:
-        host: PAnEl128.MookomeIlz.Homes
+        host: www.30994104.xyz
   - &id004
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国_2
-    type: trojan
-    server: skk.moe
-    port: 8443
-    udp: true
-    password: 41aa073b-68fa-40c0-9b1c-9dc42c0b312c
-    sni: vps.restia.love
+    name: 🇺🇸_US_美国_4
+    type: vmess
+    server: 172.233.188.217
+    port: 55579
+    cipher: auto
+    uuid: 610f7b76-a4e2-4b5a-c458-96e69cbffb5e
+    alterId: 0
+    tls: false
     skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: 41aa073b-68fa-40c0-9b1c-9dc42c0b312c-trojan
-      headers:
-        host: tj.restia.love
+    network: tcp
   - &id005
-    name: 🇺🇸_US_美国->🇬🇧_GB_英国_2
-    type: vmess
-    server: 162.159.142.242
-    port: 80
-    cipher: auto
-    uuid: dbb98828-4b51-437a-aa8e-fa9dd627cf90
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: uk3.889611.com
-  - &id006
-    name: 🇺🇸_US_美国->🇬🇧_GB_英国_3
-    type: vmess
-    server: 162.159.142.241
-    port: 80
-    cipher: auto
-    uuid: dbb98828-4b51-437a-aa8e-fa9dd627cf90
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: uk3.889611.com
-  - &id007
-    name: 🇬🇧_GB_英国_1
+    name: 🇩🇪_DE_德国_1
     type: trojan
-    server: 35.177.252.168
+    server: 35.157.223.95
     port: 22222
     udp: true
-    password: telegram-id-directvpn
+    password: telegram-id-privatevpns
     sni: trj.rollingnext.co.uk
     skip-cert-verify: true
     network: tcp
-  - &id008
-    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_1
+  - &id006
+    name: 🇨🇦_CA_加拿大_1
     type: vmess
-    server: 162.159.142.214
-    port: 80
-    cipher: auto
-    uuid: dbb98828-4b51-437a-aa8e-fa9dd627cf90
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: ca3.889611.com
-  - &id009
-    name: 🇷🇺_RU_俄罗斯联邦
-    type: vmess
-    server: 45.144.2.113
-    port: 80
-    cipher: auto
-    uuid: dbb98828-4b51-437a-aa8e-fa9dd627cf90
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: www.apple.com
-  - &id010
-    name: 🇺🇸_US_美国->🇬🇧_GB_英国_4
-    type: vmess
-    server: 162.159.142.245
-    port: 80
-    cipher: auto
-    uuid: dbb98828-4b51-437a-aa8e-fa9dd627cf90
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: uk3.889611.com
-  - &id011
-    name: 🇺🇸_US_美国_2
-    type: vmess
-    server: 162.159.142.206
-    port: 80
-    cipher: auto
-    uuid: dbb98828-4b51-437a-aa8e-fa9dd627cf90
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: er3.visaapp.top
-  - &id012
-    name: 🇬🇧_GB_英国_2
-    type: vmess
-    server: 172.99.190.109
+    server: 142.171.122.68
     port: 443
     cipher: auto
-    uuid: 03fcc618-b93d-6796-6aed-8a38c975d581
-    alterId: 0
+    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
+    alterId: 64
     tls: true
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: linkvws
-  - &id013
-    name: 🇺🇸_US_美国_3
-    type: vmess
-    server: 162.159.142.204
-    port: 80
-    cipher: auto
-    uuid: dbb98828-4b51-437a-aa8e-fa9dd627cf90
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
+      path: /path/1703231262875
       headers:
-        host: er3.889611.com
-  - &id014
-    name: 🇺🇸_US_美国_4
-    type: vmess
-    server: cf-lt.sharecentre.online
-    port: 80
-    cipher: auto
-    uuid: b1e30339-a603-47d1-b31c-1d0ceb59952e
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /api/v3/download.getFile
-      headers:
-        host: ssrsub.v004.ssrsub.com
-  - &id015
-    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_2
-    type: vmess
-    server: 162.159.142.212
-    port: 80
-    cipher: auto
-    uuid: dbb98828-4b51-437a-aa8e-fa9dd627cf90
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: ca3.889611.com
-  - &id016
+        host: www.21463847.xyz
+  - &id007
     name: 🇺🇸_US_美国_5
     type: vmess
-    server: 162.159.142.201
-    port: 80
+    server: 96.30.197.59
+    port: 56272
     cipher: auto
-    uuid: dbb98828-4b51-437a-aa8e-fa9dd627cf90
+    uuid: 8e8d5a10-7fd0-4818-8265-a4dc4a569d31
     alterId: 0
     tls: false
     skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: er3.889611.com
-  - &id017
+    network: tcp
+  - &id008
     name: 🇺🇸_US_美国_6
     type: vmess
-    server: 162.159.142.205
-    port: 80
+    server: 148.135.33.92
+    port: 443
     cipher: auto
-    uuid: dbb98828-4b51-437a-aa8e-fa9dd627cf90
-    alterId: 0
-    tls: false
+    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
+    alterId: 64
+    tls: true
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /
+      path: /path/1702392255355
       headers:
-        host: er3.889611.com
-  - &id018
+        host: www.30994104.xyz
+  - &id009
     name: 🇨🇳_CN_中国->🇨🇦_CA_加拿大_1
-    type: vmess
-    server: t.cnmjcn.cyou
-    port: 16648
-    cipher: auto
-    uuid: c2c76420-257f-492a-b20f-6560f3bfa78d
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: d4d028243c73047d9171bacb9b0439e8.mobgslb.tbcache.com
-  - &id019
-    name: 🇨🇳_CN_中国->🇨🇦_CA_加拿大_2
     type: vmess
     server: m.cnmjcn.com
     port: 16648
@@ -282,54 +121,189 @@ proxies:
       path: /
       headers:
         host: d4d028243c73047d9171bacb9b0439e8.mobgslb.tbcache.com
-  - &id020
-    name: 🇺🇸_US_美国->🇬🇧_GB_英国_5
+  - &id010
+    name: 🇨🇳_CN_中国
     type: vmess
-    server: 162.159.142.244
-    port: 80
+    server: 159.75.178.50
+    port: 47551
     cipher: auto
-    uuid: dbb98828-4b51-437a-aa8e-fa9dd627cf90
+    uuid: 2500a228-8c00-4934-81e0-22281c015a33
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
       path: /
-      headers:
-        host: uk3.889611.com
-  - &id021
-    name: 🇰🇿_KZ_哈萨克斯坦
+  - &id011
+    name: 🇨🇦_CA_加拿大_2
     type: vmess
-    server: kz-v2ray.ipracevpn.com
-    port: 8443
+    server: 142.171.202.130
+    port: 443
     cipher: auto
-    uuid: 233c6cc3-0310-4235-98f0-6f3c0633ca5f
-    alterId: 0
+    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
+    alterId: 64
     tls: true
     skip-cert-verify: true
-    network: tcp
-  - &id022
+    network: ws
+    ws-opts:
+      path: /path/1702650992491
+      headers:
+        host: www.87981532.xyz
+  - &id012
     name: 🇺🇸_US_美国_7
     type: vmess
-    server: 162.159.142.202
-    port: 80
+    server: 45.58.145.200
+    port: 30000
     cipher: auto
-    uuid: dbb98828-4b51-437a-aa8e-fa9dd627cf90
-    alterId: 0
-    tls: false
+    uuid: 55545f9e-a561-454a-8dc0-8bc110e6b1c9
+    alterId: 64
+    tls: true
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /
+      path: /path/1702301098557
       headers:
-        host: er3.889611.com
-  - &id023
+        host: www.51652109.xyz
+  - &id013
     name: 🇺🇸_US_美国_8
     type: vmess
-    server: 162.159.142.203
-    port: 80
+    server: usasb2.ip8.shop
+    port: 26460
     cipher: auto
-    uuid: dbb98828-4b51-437a-aa8e-fa9dd627cf90
+    uuid: c15bccff-fa39-4252-f789-4f997542e0b4
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ''
+  - &id014
+    name: 🇺🇸_US_美国_9
+    type: vmess
+    server: 144.202.84.47
+    port: 57848
+    cipher: auto
+    uuid: e48643e7-0462-4055-f796-6ca6aa9f946d
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id015
+    name: 🇺🇸_US_美国_10
+    type: vmess
+    server: 172.233.188.166
+    port: 11397
+    cipher: auto
+    uuid: 20e0d67d-f7aa-4bb1-daae-b7f217306bba
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id016
+    name: 🇺🇸_US_美国_11
+    type: vmess
+    server: 104.237.128.72
+    port: 14432
+    cipher: auto
+    uuid: 4c09b776-6f83-4bf2-f7f7-4e286dbbb6da
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id017
+    name: 🇺🇸_US_美国_12
+    type: vmess
+    server: 18.216.249.151
+    port: 46403
+    cipher: auto
+    uuid: 28dc6b61-09d8-4c19-b655-233cfb535567
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id018
+    name: 🇺🇸_US_美国_13
+    type: vmess
+    server: 168.235.72.221
+    port: 15551
+    cipher: auto
+    uuid: 69510633-6acb-4291-a98e-0cdcc9bd5c51
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id019
+    name: 🇩🇪_DE_德国_2
+    type: vmess
+    server: 217.160.45.31
+    port: 8880
+    cipher: auto
+    uuid: 4e186678-fcca-4325-e4bc-b2916bdf6708
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+  - &id020
+    name: 🇺🇸_US_美国_14
+    type: vmess
+    server: 45.58.153.25
+    port: 30000
+    cipher: auto
+    uuid: 4242f9e0-6b7e-4257-9e93-7ad38015c46a
+    alterId: 64
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /path/1702961716738
+  - &id021
+    name: 🇺🇸_US_美国_15
+    type: vmess
+    server: 45.58.153.24
+    port: 30000
+    cipher: auto
+    uuid: 4242f9e0-6b7e-4257-9e93-7ad38015c46a
+    alterId: 64
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /path/1702392255355
+      headers:
+        host: www.77935707.xyz
+  - &id022
+    name: 🇺🇸_US_美国_16
+    type: vmess
+    server: 148.135.33.94
+    port: 443
+    cipher: auto
+    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
+    alterId: 64
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /path/1703231262875
+      headers:
+        host: www.30994104.xyz
+  - &id023
+    name: 🇷🇺_RU_俄罗斯联邦
+    type: vmess
+    server: 46.29.166.237
+    port: 47555
+    cipher: auto
+    uuid: 0c49cd19-2758-4d38-e6a8-11f2d6635860
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id024
+    name: 🇨🇳_CN_中国->🇨🇦_CA_加拿大_2
+    type: vmess
+    server: t.cnmjcn.cyou
+    port: 16648
+    cipher: auto
+    uuid: c2c76420-257f-492a-b20f-6560f3bfa78d
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -337,7 +311,40 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: er3.889611.com
+        host: d4d028243c73047d9171bacb9b0439e8.mobgslb.tbcache.com
+  - &id025
+    name: 🇺🇸_US_美国_17
+    type: vmess
+    server: 104.238.182.29
+    port: 50706
+    cipher: auto
+    uuid: 74cc82ff-e398-4a0e-df94-e5e9d66abbb3
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id026
+    name: 🇫🇷_FR_法国
+    type: vmess
+    server: 146.59.147.250
+    port: 29776
+    cipher: auto
+    uuid: 82447abf-dcb9-408a-9ca6-79e0a7698d08
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id027
+    name: 🇺🇸_US_美国_18
+    type: vmess
+    server: 144.202.112.204
+    port: 50051
+    cipher: auto
+    uuid: 609f376e-2d8f-4509-e733-5e4580aa614c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
 proxy-groups:
   - name: PROXY
     type: select
@@ -387,6 +394,10 @@ proxy-groups:
       - *id021
       - *id022
       - *id023
+      - *id024
+      - *id025
+      - *id026
+      - *id027
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -415,6 +426,10 @@ proxy-groups:
       - *id021
       - *id022
       - *id023
+      - *id024
+      - *id025
+      - *id026
+      - *id027
   - name: SELECT
     type: select
     proxies:
@@ -441,6 +456,10 @@ proxy-groups:
       - *id021
       - *id022
       - *id023
+      - *id024
+      - *id025
+      - *id026
+      - *id027
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
