--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,6 +6,47 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
+    name: 🇺🇸_US_美国_1
+    type: ss
+    server: 38.91.107.37
+    port: 5003
+    password: g5MeD6Ft3CWlJId
+    cipher: aes-256-gcm
+  - &id002
+    name: 🇳🇱_NL_荷兰
+    type: vmess
+    server: 46.182.107.15
+    port: 30000
+    cipher: auto
+    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
+    alterId: 64
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /path/1702215223320
+  - &id003
+    name: 🇺🇸_US_美国_2
+    type: vmess
+    server: usasb2.ip8.shop
+    port: 26460
+    cipher: auto
+    uuid: c15bccff-fa39-4252-f789-4f997542e0b4
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+  - &id004
+    name: 🇺🇸_US_美国_3
+    type: vmess
+    server: 38.180.33.136
+    port: 50104
+    cipher: auto
+    uuid: 790f6802-7535-4109-de6d-15f676d5e3f7
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id005
     name: 🇩🇪_DE_德国_1
     type: vmess
     server: 217.160.45.31
@@ -18,160 +59,62 @@ proxies:
     network: ws
     ws-opts:
       path: /
-  - &id002
-    name: 🇺🇸_US_美国_1
-    type: vmess
-    server: 104.237.128.72
-    port: 14432
-    cipher: auto
-    uuid: 4c09b776-6f83-4bf2-f7f7-4e286dbbb6da
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id003
-    name: 🇺🇸_US_美国_2
-    type: vmess
-    server: 172.233.188.217
-    port: 55579
-    cipher: auto
-    uuid: 610f7b76-a4e2-4b5a-c458-96e69cbffb5e
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id004
-    name: 🇩🇪_DE_德国_2
-    type: trojan
-    server: www.casperco.online
-    port: 993
-    udp: true
-    password: 74811f39-8f69-4334-9e0f-a8a25d7413c1
-    sni: www.casperco.online
-    skip-cert-verify: true
-    network: tcp
-  - &id005
-    name: 🇩🇪_DE_德国_3
-    type: trojan
-    server: 78.47.217.216
-    port: 993
-    udp: true
-    password: 74811f39-8f69-4334-9e0f-a8a25d7413c1
-    sni: www.casperco.online
-    skip-cert-verify: true
-    network: tcp
   - &id006
-    name: 🇩🇪_DE_德国_4
-    type: trojan
-    server: www.casperco.online
-    port: 1935
-    udp: true
-    password: 74811f39-8f69-4334-9e0f-a8a25d7413c1
-    sni: www.casperco.online
-    skip-cert-verify: true
-    network: tcp
+    name: 🇫🇷_FR_法国_1
+    type: ss
+    server: 141.95.106.33
+    port: 1080
+    password: KAffy7oieVJYGKFjHvUE3g
+    cipher: aes-128-gcm
   - &id007
-    name: 🇩🇪_DE_德国_5
-    type: trojan
-    server: 78.47.217.216
-    port: 1935
-    udp: true
-    password: 74811f39-8f69-4334-9e0f-a8a25d7413c1
-    sni: www.casperco.online
+    name: 🇷🇺_RU_俄罗斯联邦_1
+    type: vmess
+    server: 46.29.166.237
+    port: 47555
+    cipher: auto
+    uuid: 0c49cd19-2758-4d38-e6a8-11f2d6635860
+    alterId: 0
+    tls: false
     skip-cert-verify: true
     network: tcp
   - &id008
-    name: 🇺🇸_US_美国_3
+    name: 🇱🇹_LT_立陶宛
     type: ss
-    server: 35.87.39.181
-    port: 443
-    password: amazonskr05
-    cipher: aes-256-cfb
+    server: tvc.sabz.top
+    port: 15171
+    password: rct9lNBCpv79OOcJmjIZ0mHxGSWnn0DXmMPgtBeQqztu
+    cipher: aes-128-gcm
   - &id009
-    name: 🇺🇸_US_美国_4
-    type: ss
-    server: 129.146.102.22
-    port: 34017
-    password: N0k6tSWblI
-    cipher: aes-256-gcm
-  - &id010
-    name: 🇺🇸_US_美国_5
-    type: vmess
-    server: usasb2.ip8.shop
-    port: 26460
-    cipher: auto
-    uuid: c15bccff-fa39-4252-f789-4f997542e0b4
-    alterId: 0
-    tls: false
+    name: 🇩🇪_DE_德国_2
+    type: trojan
+    server: 213.202.216.14
+    port: 443
+    udp: true
+    password: cfef26c9-b22b-4ee1-8d95-c00f2c3b5d2e
     skip-cert-verify: true
+    network: tcp
+  - &id010
+    name: 🇷🇺_RU_俄罗斯联邦_2
+    type: trojan
+    server: 89.221.224.93
+    port: 80
+    udp: true
+    password: 9e77b491-73d4-4ea3-985b-cfe3ae583580
+    sni: is1-t.sshmax.xyz
+    skip-cert-verify: true
+    network: tcp
   - &id011
-    name: 🇺🇸_US_美国_6
-    type: vmess
-    server: 144.202.84.47
-    port: 57848
-    cipher: auto
-    uuid: e48643e7-0462-4055-f796-6ca6aa9f946d
-    alterId: 0
-    tls: false
+    name: 🇷🇺_RU_俄罗斯联邦_3
+    type: trojan
+    server: 89.221.224.94
+    port: 80
+    udp: true
+    password: 28c79056-ccfd-4cc1-93d4-c337cc782e65
+    sni: is2-t.sshmax.xyz
     skip-cert-verify: true
     network: tcp
   - &id012
-    name: 🇬🇮_GI_直布罗陀->🇬🇧_GB_英国
-    type: trojan
-    server: 95.164.69.115
-    port: 17728
-    udp: true
-    password: 299a6171-b4ce-403a-8157-c3dad55ef3a2
-    sni: gbs.pptv-tv.store
-    skip-cert-verify: true
-    network: tcp
-  - &id013
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国
-    type: vmess
-    server: 104.26.3.0
-    port: 2053
-    cipher: auto
-    uuid: da80a49d-824e-4a7e-b42b-30e4bfa9de7c
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: sauron.melkore.ir
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: sauron.melkore.ir
-  - &id014
-    name: 🇺🇸_US_美国_7
-    type: ss
-    server: 45.58.39.13
-    port: 58428
-    password: 31LdYhP8Ae
-    cipher: aes-256-gcm
-  - &id015
-    name: 🇺🇸_US_美国_8
-    type: vmess
-    server: 132.145.132.227
-    port: 37121
-    cipher: auto
-    uuid: 93845b50-26f6-4203-f5ad-4d231d4e8f45
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-  - &id016
-    name: 🇨🇳_CN_中国->🇬🇧_GB_英国
-    type: trojan
-    server: gbs.pptv-tv.store
-    port: 17728
-    udp: true
-    password: 299a6171-b4ce-403a-8157-c3dad55ef3a2
-    skip-cert-verify: true
-    network: tcp
-  - &id017
-    name: 🇺🇸_US_美国_9
+    name: 🇺🇸_US_美国_4
     type: vmess
     server: 18.216.249.151
     port: 46403
@@ -181,25 +124,168 @@ proxies:
     tls: false
     skip-cert-verify: true
     network: tcp
-  - &id018
-    name: 🇷🇺_RU_俄罗斯联邦_1
-    type: ss
-    server: 45.144.30.202
-    port: 28490
-    password: yZdRgske85Hou96z2dRdtH
-    cipher: chacha20-ietf-poly1305
-  - &id019
-    name: 🇺🇸_US_美国_10
+  - &id013
+    name: 🇺🇸_US_美国_5
     type: vmess
-    server: 104.238.182.29
-    port: 50706
+    server: singapore.com
+    port: 80
     cipher: auto
-    uuid: 74cc82ff-e398-4a0e-df94-e5e9d66abbb3
+    uuid: b1e30339-a603-47d1-b31c-1d0ceb59952e
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /api/v3/download.getFile
+      headers:
+        host: ssrsub.v03.ssrsub.com
+  - &id014
+    name: 🇺🇸_US_美国_6
+    type: vmess
+    server: 172.233.188.217
+    port: 55579
+    cipher: auto
+    uuid: 610f7b76-a4e2-4b5a-c458-96e69cbffb5e
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id015
+    name: 🇩🇪_DE_德国_3
+    type: trojan
+    server: 78.47.217.216
+    port: 1935
+    udp: true
+    password: 74811f39-8f69-4334-9e0f-a8a25d7413c1
+    sni: www.casperco.online
+    skip-cert-verify: true
+    network: tcp
+  - &id016
+    name: 🇺🇸_US_美国_7
+    type: vmess
+    server: 144.202.84.47
+    port: 57848
+    cipher: auto
+    uuid: e48643e7-0462-4055-f796-6ca6aa9f946d
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id017
+    name: 🇺🇸_US_美国_8
+    type: vmess
+    server: 172.233.188.166
+    port: 11397
+    cipher: auto
+    uuid: 20e0d67d-f7aa-4bb1-daae-b7f217306bba
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id018
+    name: 🇫🇷_FR_法国_2
+    type: vmess
+    server: 146.59.147.250
+    port: 29776
+    cipher: auto
+    uuid: 82447abf-dcb9-408a-9ca6-79e0a7698d08
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id019
+    name: 🇮🇷_IR_伊朗_1
+    type: vmess
+    server: 91.107.172.128
+    port: 3350
+    cipher: auto
+    uuid: 2bf900ac-909a-4610-dc18-86a3a136b286
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: tcp
   - &id020
+    name: 🇺🇸_US_美国_9
+    type: vmess
+    server: 144.202.81.122
+    port: 25514
+    cipher: auto
+    uuid: 13bf827e-55cd-4b46-e9f1-b7f9ffbe7955
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+  - &id021
+    name: 🇮🇷_IR_伊朗_2
+    type: vmess
+    server: duss.celebjared.pk
+    port: 80
+    cipher: auto
+    uuid: 781dfd50-3d2f-4d5b-99ef-47fa111bddb8
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /Y07GAOt43udo1xvoAgfajHtB
+      headers:
+        host: duss.celebjared.pk
+  - &id022
+    name: 🇨🇳_CN_中国->🇮🇳_IN_印度
+    type: ss
+    server: service.ouluyun9803.com
+    port: 21003
+    password: 057bf3ac-fda1-44c3-aa8e-07eed7ddc5b6
+    cipher: chacha20-ietf-poly1305
+  - &id023
+    name: 🇬🇧_GB_英国_1
+    type: trojan
+    server: 18.169.3.36
+    port: 22222
+    udp: true
+    password: telegram-id-directvpn
+    sni: trj.rollingnext.co.uk
+    skip-cert-verify: true
+    network: tcp
+    alpn:
+      - http/1.1
+  - &id024
+    name: 🇺🇸_US_美国_10
+    type: trojan
+    server: jp1.lvwf8n-hh8e-2300-nmoo-d2e9naobeacn.9d8f269f96b25232-759cbb36d6548597.kaufen
+    port: 443
+    udp: true
+    password: 92d3e5b6-6e8c-483b-a72b-000568d2e814
+    sni: 13-231-155-134.nhost.00cdn.com
+    skip-cert-verify: true
+    network: tcp
+  - &id025
+    name: 🇩🇪_DE_德国_4
+    type: trojan
+    server: www.casperco.online
+    port: 993
+    udp: true
+    password: 74811f39-8f69-4334-9e0f-a8a25d7413c1
+    sni: www.casperco.online
+    skip-cert-verify: true
+    network: tcp
+  - &id026
+    name: 🇯🇵_JP_日本
+    type: trojan
+    server: 54.168.244.142
+    port: 3306
+    udp: true
+    password: d07a02a06191c99f
+    sni: n2.gladns.com
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /gateway/connect
+      headers:
+        host: n2.gladns.com
+  - &id027
     name: 🇺🇸_US_美国_11
     type: vmess
     server: 168.235.72.221
@@ -210,8 +296,15 @@ proxies:
     tls: false
     skip-cert-verify: true
     network: tcp
-  - &id021
-    name: 🇬🇧_GB_英国
+  - &id028
+    name: 🇺🇸_US_美国_12
+    type: ss
+    server: 45.58.39.13
+    port: 58428
+    password: 31LdYhP8Ae
+    cipher: aes-256-gcm
+  - &id029
+    name: 🇬🇧_GB_英国_2
     type: vmess
     server: UK99.5GTOCDOCAO.COM
     port: 80
@@ -225,151 +318,81 @@ proxies:
       path: /5gtocdocao.com
       headers:
         host: dl.kgvn.garenanow.com
-  - &id022
-    name: 🇺🇸_US_美国_12
-    type: vmess
-    server: 172.233.188.166
-    port: 11397
-    cipher: auto
-    uuid: 20e0d67d-f7aa-4bb1-daae-b7f217306bba
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id023
+  - &id030
     name: 🇺🇸_US_美国_13
     type: vmess
-    server: cf-lt.sharecentre.online
+    server: 104.21.75.246
     port: 80
     cipher: auto
-    uuid: b1e30339-a603-47d1-b31c-1d0ceb59952e
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /api/v3/download.getFile
+      path: /
       headers:
-        host: ssrsub.v004.ssrsub.com
-  - &id024
-    name: 🇺🇸_US_美国_14
+        host: sbl2.shabijichang.com
+  - &id031
+    name: 🇷🇺_RU_俄罗斯联邦_4
     type: ss
-    server: 95.164.37.226
-    port: 8388
-    password: NjJkZmYw
+    server: 45.144.30.202
+    port: 28490
+    password: yZdRgske85Hou96z2dRdtH
     cipher: chacha20-ietf-poly1305
-  - &id025
-    name: 🇷🇺_RU_俄罗斯联邦_2
+  - &id032
+    name: 🇷🇺_RU_俄罗斯联邦_5
     type: ss
     server: 91.194.161.7
     port: 8388
     password: OWJlYjYy
     cipher: chacha20-ietf-poly1305
-  - &id026
-    name: 🇫🇷_FR_法国
-    type: ss
-    server: 185.231.205.80
-    port: 1443
-    password: MGQwNTgw
-    cipher: chacha20-ietf-poly1305
-  - &id027
-    name: 🇺🇸_US_美国_15
-    type: vmess
-    server: 172.234.17.31
-    port: 48771
-    cipher: auto
-    uuid: f1c2be64-961b-407a-c4e0-b8919ca1253b
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id028
-    name: 🇺🇸_US_美国_16
-    type: vmess
-    server: 144.202.112.204
-    port: 50051
-    cipher: auto
-    uuid: 609f376e-2d8f-4509-e733-5e4580aa614c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id029
-    name: 🇮🇷_IR_伊朗
-    type: vmess
-    server: 91.107.172.128
-    port: 3350
-    cipher: auto
-    uuid: 2bf900ac-909a-4610-dc18-86a3a136b286
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id030
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
-    type: vmess
-    server: us2.awslcn.info
-    port: 25257
-    cipher: auto
-    uuid: 93ec7261-1c92-4149-848a-26b6fb9fc4ce
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: us2.awslcn.info
-  - &id031
-    name: 🇨🇳_CN_中国->🇷🇺_RU_俄罗斯联邦
-    type: vmess
-    server: cm1.awslcn.info
-    port: 25230
-    cipher: auto
-    uuid: 93ec7261-1c92-4149-848a-26b6fb9fc4ce
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: cm1.awslcn.info
-  - &id032
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
-    type: vmess
-    server: us1.awslcn.info
-    port: 25239
-    cipher: auto
-    uuid: 93ec7261-1c92-4149-848a-26b6fb9fc4ce
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: us1.awslcn.info
   - &id033
-    name: 🇯🇵_JP_日本->🇺🇸_US_美国
-    type: trojan
-    server: us01.trojanyyds.xyz
-    port: 443
-    udp: true
-    password: 93ec7261-1c92-4149-848a-26b6fb9fc4ce
-    sni: us01.trojanyyds.xyz
+    name: 🇮🇳_IN_印度_1
+    type: vmess
+    server: 103.113.68.233
+    port: 80
+    cipher: auto
+    uuid: 61cf7313-1503-4bab-beeb-ba69fd5843ae
+    alterId: 0
+    tls: false
     skip-cert-verify: true
-    network: tcp
+    network: ws
+    ws-opts:
+      path: /vmess
+      headers:
+        host: 103.113.68.233
   - &id034
-    name: 🇭🇰_HK_香港->🇷🇺_RU_俄罗斯联邦
+    name: 🇩🇪_DE_德国_5
     type: trojan
-    server: ru01.trojanyyds.xyz
-    port: 443
+    server: www.casperco.online
+    port: 1935
     udp: true
-    password: 93ec7261-1c92-4149-848a-26b6fb9fc4ce
-    sni: ru01.trojanyyds.xyz
+    password: 74811f39-8f69-4334-9e0f-a8a25d7413c1
     skip-cert-verify: true
     network: tcp
+  - &id035
+    name: 🇮🇳_IN_印度_2
+    type: vmess
+    server: ru1-vmess.sshmax.xyz
+    port: 80
+    cipher: auto
+    uuid: 61cf7313-1503-4bab-beeb-ba69fd5843ae
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /vmess
+      headers:
+        host: ru1-vmess.sshmax.xyz
+  - &id036
+    name: 🇷🇺_RU_俄罗斯联邦_6
+    type: ss
+    server: is1.ssproxy.xyz
+    port: 1443
+    password: OWJlYjYy
+    cipher: chacha20-ietf-poly1305
 proxy-groups:
   - name: PROXY
     type: select
@@ -430,6 +453,8 @@ proxy-groups:
       - *id032
       - *id033
       - *id034
+      - *id035
+      - *id036
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -469,6 +494,8 @@ proxy-groups:
       - *id032
       - *id033
       - *id034
+      - *id035
+      - *id036
   - name: SELECT
     type: select
     proxies:
@@ -506,6 +533,8 @@ proxy-groups:
       - *id032
       - *id033
       - *id034
+      - *id035
+      - *id036
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
